kubernetes/ingress-cartosi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superset-ingress
  namespace: cartosi
spec:
  rules:
    - host: "superset.localhost.traefik"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: superset
                port:
                  number: 8088
